# 4dy-client

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
callback-popup/: Cargo.toml
callback-popup/src/: main.rs
desktop-client/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
desktop-client/src/: App.svelte
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/capabilities/: default.json  remote.json
desktop-client/src-tauri/icons/: icon.icns
desktop-client/src-tauri/src/: clipboard.rs  config.rs  hotkeys.rs  inject.rs  lib.rs  main.rs  tray.rs
desktop-client/src/inject/: main.js  selectors.js  selectors.test.js  styles.css
desktop-client/src/lib/: SetupWizard.svelte  validation.test.ts  validation.ts
libs/i18n/: Cargo.toml
libs/i18n/src/: lib.rs
scripts/: update-deps.ps1  update-deps.sh
tel-handler/: Cargo.toml
tel-handler/src/: main.rs  phone.rs
