[package]
name = "fourdy-callback-popup"
version = "0.1.0"
edition = "2021"
description = "Standalone Win32 callback notification popup for the 4dy desktop client"
authors = ["Manuel Hilgert"]
license = "MIT"
repository = "https://github.com/hilman2/4dy-client"

[[bin]]
name = "callback-popup"
path = "src/main.rs"

[dependencies]
urlencoding = "2"
notify-rust = "4"
fourdy-i18n = { path = "../libs/i18n" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
]

[profile.release]
opt-level = "s"
lto = true
